--- a/new/components/content/gallery/album/album.css
+++ b/new/components/content/gallery/album/album.css
@@ -1,3 +1,4 @@
-.album{
-    padding-bottom:25px;
+.album {
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
